--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.0",
+    "@types/node-schedule": "^2.1.7",
     "jest": "^27.0.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.0.0"
@@ -17,6 +18,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "node-schedule": "^2.1.1",
     "puppeteer": "^24.8.2"
   }
 }
